--- a/Test_Environment/Test_Environment.vcxproj.filters
+++ b/Test_Environment/Test_Environment.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Utils\Context.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
