Worked on collision, Test app, contraints, joints, raycasting, optimization and more

--- a/2D_Physics_Library/2D_Physics_Library.vcxproj
+++ b/2D_Physics_Library/2D_Physics_Library.vcxproj
@@ -79,6 +79,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(ProjectDir)Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -151,25 +152,40 @@
     <ClInclude Include="Include\Math\Transform.h" />
     <ClInclude Include="Include\Math\Vec2.h" />
     <ClInclude Include="Include\Physics2D.h" />
+    <ClInclude Include="Include\Physics\AABBTree.h" />
     <ClInclude Include="Include\Physics\Body.h" />
     <ClInclude Include="Include\Physics\BroadPhase.h" />
     <ClInclude Include="Include\Physics\Collision.h" />
+    <ClInclude Include="Include\Physics\Constraint.h" />
     <ClInclude Include="Include\Physics\Contacts\ChainAndCircleContact.h" />
+    <ClInclude Include="Include\Physics\Contacts\ChainAndPolygonContact.h" />
     <ClInclude Include="Include\Physics\Contacts\CircleContact.h" />
     <ClInclude Include="Include\Physics\Contacts\Contact.h" />
     <ClInclude Include="Include\Physics\Contacts\ContactFilter.h" />
     <ClInclude Include="Include\Physics\Contacts\ContactManager.h" />
     <ClInclude Include="Include\Physics\Contacts\ContactSolver.h" />
     <ClInclude Include="Include\Physics\Contacts\EdgeAndCircleContact.h" />
+    <ClInclude Include="Include\Physics\Contacts\EdgeAndPolygonContact.h" />
+    <ClInclude Include="Include\Physics\Contacts\PolygonAndCircleContact.h" />
+    <ClInclude Include="Include\Physics\Contacts\PolygonContact.h" />
     <ClInclude Include="Include\Physics\EventListener.h" />
+    <ClInclude Include="Include\Physics\Joints\DistanceJoint.h" />
+    <ClInclude Include="Include\Physics\Joints\FixedJoint.h" />
+    <ClInclude Include="Include\Physics\Joints\Joint.h" />
+    <ClInclude Include="Include\Physics\Joints\PrismaticJoint.h" />
+    <ClInclude Include="Include\Physics\Joints\RevoluteJoint.h" />
     <ClInclude Include="Include\Physics\Manifold.h" />
     <ClInclude Include="Include\Physics\Material.h" />
     <ClInclude Include="Include\Physics\PhysicsSolver.h" />
+    <ClInclude Include="Include\Physics\Raycaster.h" />
     <ClInclude Include="Include\Physics\Shapes\ChainShape.h" />
     <ClInclude Include="Include\Physics\Shapes\CircleShape.h" />
     <ClInclude Include="Include\Physics\Shapes\EdgeShape.h" />
+    <ClInclude Include="Include\Physics\Shapes\PolygonShape.h" />
     <ClInclude Include="Include\Physics\Shapes\Shape.h" />
     <ClInclude Include="Include\Physics\World.h" />
+    <ClCompile Include="Source\Physics\AABBTree.cpp" />
+    <ClCompile Include="Source\Physics\Contacts\ChainAndPolygonContact.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Include\Math\AABB.inl" />
@@ -179,8 +195,17 @@
   <ItemGroup>
     <ClCompile Include="Source\Common\BlockAllocator.cpp" />
     <ClCompile Include="Source\Common\StackAllocator.cpp" />
+    <ClCompile Include="Source\Physics\Constraint.cpp" />
     <ClCompile Include="Source\Physics\Contacts\ChainAndCircleContact.cpp" />
     <ClCompile Include="Source\Physics\Contacts\EdgeAndCircleContact.cpp" />
+    <ClCompile Include="Source\Physics\Contacts\EdgeAndPolygonContact.cpp" />
+    <ClCompile Include="Source\Physics\Contacts\PolygonAndCircleContact.cpp" />
+    <ClCompile Include="Source\Physics\Contacts\PolygonContact.cpp" />
+    <ClCompile Include="Source\Physics\Joints\DistanceJoint.cpp" />
+    <ClCompile Include="Source\Physics\Joints\FixedJoint.cpp" />
+    <ClCompile Include="Source\Physics\Joints\Joint.cpp" />
+    <ClCompile Include="Source\Physics\Joints\PrismaticJoint.cpp" />
+    <ClCompile Include="Source\Physics\Joints\RevoluteJoint.cpp" />
     <ClCompile Include="Source\Physics\PhysicsSolver.cpp" />
     <ClCompile Include="Source\Physics\Body.cpp" />
     <ClCompile Include="Source\Physics\BroadPhase.cpp" />
@@ -192,9 +217,11 @@
     <ClCompile Include="Source\Physics\Contacts\ContactSolver.cpp" />
     <ClCompile Include="Source\Physics\EventListener.cpp" />
     <ClCompile Include="Source\Physics\Material.cpp" />
+    <ClCompile Include="Source\Physics\Raycaster.cpp" />
     <ClCompile Include="Source\Physics\Shapes\ChainShape.cpp" />
     <ClCompile Include="Source\Physics\Shapes\CircleShape.cpp" />
     <ClCompile Include="Source\Physics\Shapes\EdgeShape.cpp" />
+    <ClCompile Include="Source\Physics\Shapes\PolygonShape.cpp" />
     <ClCompile Include="Source\Physics\Shapes\Shape.cpp" />
     <ClCompile Include="Source\Physics\World.cpp" />
   </ItemGroup>
